<resources>
    <string name="app_name">mecanica2</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menú Principal</string>
    <string name="menu_usuario">Gestión Usuarios</string>
    <string name="menu_proforma">Gestión de Proformas</string>
    <string name="menu_escaneo">Gestión de Escaneo</string>
    <string name="menu_cotizacion">Gestión Cotización</string>
    <string name="menu_reclamo">Gestión de Reclamo</string>
    <string name="menu_evidencia">Gestión de Evidencias</string>
</resources>